Fix CD timer covering undo button when 'keep color selected' is off

--- a/resources/public/style.css
+++ b/resources/public/style.css
@@ -408,6 +408,7 @@ a, a:hover, a:visited, a:active {
     text-align: center;
     white-space: nowrap;
     background-color: rgba(255, 255, 255, 0.8);
+    position:relative;
 }
 
 .palette-color {
